--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/ru/img/flag.png" width="76"/>
-    <link rel="stylesheet" href="/ru/style.css">
+    <link rel="shortcut icon" href="/pn/img/flag.png" width="76"/>
+    <link rel="stylesheet" href="/pn/style.css">
     <title>Портал государственных услуг Российской Федерации</title>
 </head>
 <body>
     <div>
-        <img src="/ru/img/i-3.jpg" alt="covid-sertificate-elvin-novruzov">
+        <img src="/pn/i-green-FINAL.jpg" alt="covid-sertificate-panakh-novruzov">
     </div>
     
     <!-- C:/Users/ElvinNovruzov/Desktop/covid/russian/site/ -->
