--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/pn/img/flag.png" width="76"/>
+    <link rel="shortcut icon" href="/pn/flag.png" width="76"/>
     <link rel="stylesheet" href="/pn/style.css">
     <title>Портал государственных услуг Российской Федерации</title>
 </head>
